[gd_scene load_steps=27 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Actors/Player sprites/adventurer-run-00-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Actors/Player sprites/roll.png" type="Texture" id=3]
[ext_resource path="res://Actors/Player sprites/adventurer-idle-00-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Actors/Player sprites/Atack.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 13.5 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 31 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 31 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 31 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 31 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 31 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 31 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Ata",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Roll",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 7.5, 10 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 1 )
frames = SubResource( 8 )
animation = "idle"
frame = 1
speed_scale = 1.5
playing = true
offset = Vector2( -3, -4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_right = 0.082
margin_left = -150.0
margin_top = 25.0
margin_right = -35.0
margin_bottom = 73.0
max_value = 4.0
step = 1.0
value = 4.0
percent_visible = false

[node name="Ataque1" type="Area2D" parent="."]
position = Vector2( 15, 1 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ataque1"]
shape = SubResource( 17 )

[node name="Ataque2" type="Area2D" parent="."]
position = Vector2( -15, 1 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ataque2"]
shape = SubResource( 17 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Ataque1" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Ataque2" to="." method="_on_Area2D2_body_entered"]
